--- a/1 - web-scraping/mercadolivre-scraping.ipynb
+++ b/1 - web-scraping/mercadolivre-scraping.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "['950', '600', '1.299', '1.000', '590']"
+       "['1.000', '1.299', '620', '799', '2.200']"
       ]
      },
      "execution_count": 5,
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "['950', '600', '1.299', '1.000', '590']"
+       "['1.000', '1.299', '620', '799', '2.200']"
       ]
      },
      "execution_count": 6,
@@ -130,11 +130,11 @@
     {
      "data": {
       "text/plain": [
-       "['42 m² construídos2 quartos',\n",
-       " '70 m² construídos1 quarto',\n",
+       "['50 m² construídos1 quarto',\n",
        " '80 m² construídos2 quartos',\n",
+       " '30 m² construídos1 quarto',\n",
        " '50 m² construídos1 quarto',\n",
-       " '30 m² construídos1 quarto']"
+       " '110 m² construídos2 quartos']"
       ]
      },
      "execution_count": 8,
@@ -171,11 +171,11 @@
     {
      "data": {
       "text/plain": [
-       "['Parque Peruche, São Paulo Zona Norte, São Paulo',\n",
-       " 'Nobrega De Souza Coutinho 05, Jardim Peri, São Paulo Zona Norte, São Paulo',\n",
+       "['Rua Campo Belo Do Sul 113, Parque Vitória, São Paulo Zona Norte, São Paulo',\n",
        " 'Rua José Eduardo Raduan 5, Parque Edu Chaves, São Paulo Zona Norte, São Paulo',\n",
-       " 'Rua Campo Belo Do Sul 113, Parque Vitória, São Paulo Zona Norte, São Paulo',\n",
-       " 'Rua Rodolfo Bardela 335, Brasilândia, São Paulo Zona Norte, São Paulo']"
+       " 'Rua Rodolfo Bardela 335, Brasilândia, São Paulo Zona Norte, São Paulo',\n",
+       " 'Brandão Agrões 176, Jardim Peri, São Paulo Zona Norte, São Paulo',\n",
+       " 'Conceição, Jardim Japão, São Paulo Zona Norte, São Paulo']"
       ]
      },
      "execution_count": 10,
@@ -202,15 +202,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zonas = ['norte', 'sul', 'leste', 'oeste']\n",
-    "URL='https://imoveis.mercadolivre.com.br/casas/aluguel/sao-paulo/sao-paulo-zona-{}/{}'\n",
-    "paginas = ['', '_Desde_49', '_Desde_97', '_Desde_145', '_Desde_193', \n",
-    "           '_Desde_241', '_Desde_289']"
+    "lista_pag = []\n",
+    "for i in range(1,1537):\n",
+    "    num_1 ='_Desde_'\n",
+    "    num_2 = i\n",
+    "    num = '{}{}'.format(num_1,num_2)\n",
+    "    lista_pag.append(num)\n",
+    "\n",
+    "\n",
+    "lista_pag_1 = lista_pag[::48]\n",
+    "lista_pag_1[0] = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zonas = ['norte', 'sul', 'leste', 'oeste']\n",
+    "URL='https://imoveis.mercadolivre.com.br/casas/aluguel/sao-paulo/sao-paulo-zona-{}/{}'\n",
+    "paginas = lista_pag_1[0:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +271,7 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_289\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_337\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_49\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_97\n",
@@ -261,6 +279,7 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_289\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_337\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_49\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_97\n",
@@ -268,13 +287,15 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_289\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_337\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_49\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_97\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_145\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_241\n",
-      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_289\n"
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_289\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_337\n"
      ]
     }
    ],
@@ -334,56 +355,56 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>norte</td>\n",
-       "      <td>42 m² construídos2 quartos</td>\n",
-       "      <td>Parque Peruche, São Paulo Zona Norte, São Paulo</td>\n",
-       "      <td>950</td>\n",
+       "      <td>82 m² construídos3 quartos</td>\n",
+       "      <td>Rua Dona Maria Quedas, Jardim Andaraí, São Pau...</td>\n",
+       "      <td>1.098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>norte</td>\n",
-       "      <td>75 m² construídos2 quartos</td>\n",
-       "      <td>Avenida Nova Cantareira, Santana, São Paulo Zo...</td>\n",
-       "      <td>1.272</td>\n",
+       "      <td>48 m² construídos1 quarto</td>\n",
+       "      <td>R Desembargador Euclides Da Silveira, Casa Ver...</td>\n",
+       "      <td>2.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>norte</td>\n",
-       "      <td>58 m² construídos2 quartos</td>\n",
-       "      <td>Avenida Deputado Emílio Carlos, Limão, São Pau...</td>\n",
-       "      <td>1.100</td>\n",
+       "      <td>105 m² construídos3 quartos</td>\n",
+       "      <td>Av Braz Leme, Santana, São Paulo Zona Norte, S...</td>\n",
+       "      <td>3.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>norte</td>\n",
-       "      <td>68 m² construídos2 quartos</td>\n",
-       "      <td>Rua General José De Almeida Botelho, Parque Ma...</td>\n",
-       "      <td>981</td>\n",
+       "      <td>95 m² construídos3 quartos</td>\n",
+       "      <td>Avenida Nova Cantareira, Tucuruvi, São Paulo Z...</td>\n",
+       "      <td>1.814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>norte</td>\n",
-       "      <td>80 m² construídos3 quartos</td>\n",
-       "      <td>Rua Alcides Godói, Mandaqui, São Paulo Zona No...</td>\n",
-       "      <td>1.768</td>\n",
+       "      <td>50 m² construídos2 quartos</td>\n",
+       "      <td>Parada Pinto, Vila Nova Cachoeirinha, São Paul...</td>\n",
+       "      <td>1.100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    zona                area_quartos  \\\n",
-       "0  norte  42 m² construídos2 quartos   \n",
-       "1  norte  75 m² construídos2 quartos   \n",
-       "2  norte  58 m² construídos2 quartos   \n",
-       "3  norte  68 m² construídos2 quartos   \n",
-       "4  norte  80 m² construídos3 quartos   \n",
+       "    zona                 area_quartos  \\\n",
+       "0  norte   82 m² construídos3 quartos   \n",
+       "1  norte    48 m² construídos1 quarto   \n",
+       "2  norte  105 m² construídos3 quartos   \n",
+       "3  norte   95 m² construídos3 quartos   \n",
+       "4  norte   50 m² construídos2 quartos   \n",
        "\n",
        "                                     enderecos_lista aluguel  \n",
-       "0    Parque Peruche, São Paulo Zona Norte, São Paulo     950  \n",
-       "1  Avenida Nova Cantareira, Santana, São Paulo Zo...   1.272  \n",
-       "2  Avenida Deputado Emílio Carlos, Limão, São Pau...   1.100  \n",
-       "3  Rua General José De Almeida Botelho, Parque Ma...     981  \n",
-       "4  Rua Alcides Godói, Mandaqui, São Paulo Zona No...   1.768  "
+       "0  Rua Dona Maria Quedas, Jardim Andaraí, São Pau...   1.098  \n",
+       "1  R Desembargador Euclides Da Silveira, Casa Ver...   2.000  \n",
+       "2  Av Braz Leme, Santana, São Paulo Zona Norte, S...   3.000  \n",
+       "3  Avenida Nova Cantareira, Tucuruvi, São Paulo Z...   1.814  \n",
+       "4  Parada Pinto, Vila Nova Cachoeirinha, São Paul...   1.100  "
       ]
      },
      "execution_count": 19,
@@ -397,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
