--- a/2 - manipulação-de-dados/manipulacao_de_dados.ipynb
+++ b/2 - manipulação-de-dados/manipulacao_de_dados.ipynb
@@ -966,55 +966,55 @@
        "Av.              11\n",
        "R.                6\n",
        "Av                4\n",
-       "Travessa          4\n",
        "Jardim            4\n",
+       "Travessa          4\n",
        "R                 3\n",
-       "Pinheiros         3\n",
        "Alto              3\n",
-       "Amador            2\n",
+       "Pinheiros         3\n",
        "Apucarana         2\n",
        "Capitão           2\n",
+       "Amador            2\n",
        "Penha             2\n",
-       "Ataliba           1\n",
-       "Cardoso           1\n",
-       "Água              1\n",
-       "Tv.               1\n",
-       "Jorge             1\n",
-       "Conceição         1\n",
-       "Artur             1\n",
-       "Das               1\n",
-       "Josino            1\n",
-       "Lucerna           1\n",
-       "Rodovia           1\n",
-       "Dr                1\n",
-       "Sítio             1\n",
-       "Largo             1\n",
-       "General           1\n",
-       "Doutor            1\n",
-       "Parada            1\n",
-       "Guaicurus         1\n",
-       "Estrada           1\n",
-       "Enrico            1\n",
-       "Eça               1\n",
-       "Antônio           1\n",
-       "Brandão           1\n",
-       "City              1\n",
-       "Principe          1\n",
-       "Belenzinho        1\n",
-       "Pereira           1\n",
-       "Voluntários       1\n",
-       "Av.dona           1\n",
-       "Acalanto          1\n",
        "Viaduto           1\n",
-       "Nao               1\n",
-       "Conjunto          1\n",
-       "Epaminondas       1\n",
-       "Lapa              1\n",
-       "Narita            1\n",
-       "Fagundes          1\n",
-       "Garção            1\n",
-       "9                 1\n",
+       "City              1\n",
+       "Av.dona           1\n",
+       "Parada            1\n",
+       "Cardoso           1\n",
+       "Acalanto          1\n",
        "Soldado           1\n",
+       "Água              1\n",
+       "Antônio           1\n",
+       "Rodovia           1\n",
+       "Estrada           1\n",
+       "9                 1\n",
+       "Enrico            1\n",
+       "Principe          1\n",
+       "General           1\n",
+       "Narita            1\n",
+       "Conceição         1\n",
+       "Guaicurus         1\n",
+       "Lapa              1\n",
+       "Voluntários       1\n",
+       "Josino            1\n",
+       "Ataliba           1\n",
+       "Tv.               1\n",
+       "Das               1\n",
+       "Lucerna           1\n",
+       "Epaminondas       1\n",
+       "Pereira           1\n",
+       "Largo             1\n",
+       "Artur             1\n",
+       "Fagundes          1\n",
+       "Eça               1\n",
+       "Belenzinho        1\n",
+       "Jorge             1\n",
+       "Dr                1\n",
+       "Nao               1\n",
+       "Doutor            1\n",
+       "Garção            1\n",
+       "Brandão           1\n",
+       "Sítio             1\n",
+       "Conjunto          1\n",
        "Name: 0, dtype: int64"
       ]
      },
@@ -1053,55 +1053,55 @@
        "Av.              11\n",
        "R.                6\n",
        "Av                4\n",
-       "Travessa          4\n",
        "Jardim            4\n",
+       "Travessa          4\n",
        "R                 3\n",
-       "Pinheiros         3\n",
        "Alto              3\n",
-       "Amador            2\n",
+       "Pinheiros         3\n",
        "Apucarana         2\n",
        "Capitão           2\n",
+       "Amador            2\n",
        "Penha             2\n",
-       "Ataliba           1\n",
-       "Cardoso           1\n",
-       "Água              1\n",
-       "Tv.               1\n",
-       "Jorge             1\n",
-       "Conceição         1\n",
-       "Artur             1\n",
-       "Das               1\n",
-       "Josino            1\n",
-       "Lucerna           1\n",
-       "Rodovia           1\n",
-       "Dr                1\n",
-       "Sítio             1\n",
-       "Largo             1\n",
-       "General           1\n",
-       "Doutor            1\n",
-       "Parada            1\n",
-       "Guaicurus         1\n",
-       "Estrada           1\n",
-       "Enrico            1\n",
-       "Eça               1\n",
-       "Antônio           1\n",
-       "Brandão           1\n",
-       "City              1\n",
-       "Principe          1\n",
-       "Belenzinho        1\n",
-       "Pereira           1\n",
-       "Voluntários       1\n",
-       "Av.dona           1\n",
-       "Acalanto          1\n",
        "Viaduto           1\n",
-       "Nao               1\n",
-       "Conjunto          1\n",
-       "Epaminondas       1\n",
-       "Lapa              1\n",
-       "Narita            1\n",
-       "Fagundes          1\n",
-       "Garção            1\n",
-       "9                 1\n",
+       "City              1\n",
+       "Av.dona           1\n",
+       "Parada            1\n",
+       "Cardoso           1\n",
+       "Acalanto          1\n",
        "Soldado           1\n",
+       "Água              1\n",
+       "Antônio           1\n",
+       "Rodovia           1\n",
+       "Estrada           1\n",
+       "9                 1\n",
+       "Enrico            1\n",
+       "Principe          1\n",
+       "General           1\n",
+       "Narita            1\n",
+       "Conceição         1\n",
+       "Guaicurus         1\n",
+       "Lapa              1\n",
+       "Voluntários       1\n",
+       "Josino            1\n",
+       "Ataliba           1\n",
+       "Tv.               1\n",
+       "Das               1\n",
+       "Lucerna           1\n",
+       "Epaminondas       1\n",
+       "Pereira           1\n",
+       "Largo             1\n",
+       "Artur             1\n",
+       "Fagundes          1\n",
+       "Eça               1\n",
+       "Belenzinho        1\n",
+       "Jorge             1\n",
+       "Dr                1\n",
+       "Nao               1\n",
+       "Doutor            1\n",
+       "Garção            1\n",
+       "Brandão           1\n",
+       "Sítio             1\n",
+       "Conjunto          1\n",
        "Name: rua_av, dtype: int64"
       ]
      },
@@ -1149,15 +1149,15 @@
     {
      "data": {
       "text/plain": [
-       "Rua         1203\n",
-       "Avenida      206\n",
-       "Alameda       17\n",
-       "Praça         13\n",
-       "Vila          11\n",
-       "Av.           11\n",
-       "R.             6\n",
-       "Travessa       4\n",
-       "Av             4\n",
+       "Rua        1203\n",
+       "Avenida     206\n",
+       "Alameda      17\n",
+       "Praça        13\n",
+       "Vila         11\n",
+       "Av.          11\n",
+       "R.            6\n",
+       "Av            4\n",
+       "Jardim        4\n",
        "Name: rua_av, dtype: int64"
       ]
      },
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
        "Rua      58       2   Parque Mandaqui     Maria Bandini Savoy  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,24 +1318,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Rua         1203\n",
-       "Avenida      206\n",
-       "Alameda       17\n",
-       "Praça         13\n",
-       "Av.           11\n",
-       "R.             6\n",
-       "Travessa       4\n",
-       "Av             4\n",
+       "Rua        1203\n",
+       "Avenida     206\n",
+       "Alameda      17\n",
+       "Praça        13\n",
+       "Av.          11\n",
+       "R.            6\n",
+       "Av            4\n",
+       "Jardim        4\n",
        "Name: rua_av, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,21 +1365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "rua         1209\n",
-       "avenida      217\n",
-       "alameda       17\n",
-       "praca         13\n",
-       "travessa       4\n",
+       "rua        1209\n",
+       "avenida     217\n",
+       "alameda      17\n",
+       "praca        13\n",
        "Name: rua_av, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1407,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1550,7 @@
        "4     1300  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1570,7 @@
        "(1464, 7)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,23 +1581,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "logradouro          4\n",
+       "logradouro          8\n",
        "nome_logradouro     0\n",
        "bairro              0\n",
        "zona                0\n",
        "area                0\n",
-       "quartos            24\n",
+       "quartos            27\n",
        "aluguel             0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,11 +1608,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('dados_aluguel_manipulados_ml_sao_paulo.csv', index =False , encoding = 'latin-1')"
+    "dados.to_csv('dados_aluguel_manipulados_ml_sao_paulo.csv', index =False , encoding = 'latin-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>logradouro</th>\n",
+       "      <th>nome_logradouro</th>\n",
+       "      <th>bairro</th>\n",
+       "      <th>zona</th>\n",
+       "      <th>area</th>\n",
+       "      <th>quartos</th>\n",
+       "      <th>aluguel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>rua</td>\n",
+       "      <td>Dona Maria Quedas</td>\n",
+       "      <td>Jardim Andaraí</td>\n",
+       "      <td>norte</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rua</td>\n",
+       "      <td>Vitalina Moura</td>\n",
+       "      <td>Vila Roque</td>\n",
+       "      <td>norte</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>rua</td>\n",
+       "      <td>Alcindo Bueno De Assis</td>\n",
+       "      <td>Barro Branco</td>\n",
+       "      <td>norte</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rua</td>\n",
+       "      <td>Artur De Oliveira</td>\n",
+       "      <td>Parque Peruche</td>\n",
+       "      <td>norte</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>rua</td>\n",
+       "      <td>Maria Bandini Savoy</td>\n",
+       "      <td>Parque Mandaqui</td>\n",
+       "      <td>norte</td>\n",
+       "      <td>58</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1459</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Corifeu De Azevedo Marques</td>\n",
+       "      <td>Butantã</td>\n",
+       "      <td>oeste</td>\n",
+       "      <td>455</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1460</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Marília</td>\n",
+       "      <td>São Paulo Zona Leste</td>\n",
+       "      <td>leste</td>\n",
+       "      <td>70</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1461</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Keralux</td>\n",
+       "      <td>São Paulo Zona Leste</td>\n",
+       "      <td>leste</td>\n",
+       "      <td>26745</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1462</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ester</td>\n",
+       "      <td>São Paulo Zona Oeste</td>\n",
+       "      <td>oeste</td>\n",
+       "      <td>300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1463</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>São Jorge (raposo Tavares)</td>\n",
+       "      <td>São Paulo Zona Oeste</td>\n",
+       "      <td>oeste</td>\n",
+       "      <td>300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1464 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     logradouro             nome_logradouro                 bairro   zona  \\\n",
+       "0           rua           Dona Maria Quedas         Jardim Andaraí  norte   \n",
+       "1           rua              Vitalina Moura             Vila Roque  norte   \n",
+       "2           rua      Alcindo Bueno De Assis           Barro Branco  norte   \n",
+       "3           rua           Artur De Oliveira         Parque Peruche  norte   \n",
+       "4           rua         Maria Bandini Savoy        Parque Mandaqui  norte   \n",
+       "...         ...                         ...                    ...    ...   \n",
+       "1459        NaN  Corifeu De Azevedo Marques                Butantã  oeste   \n",
+       "1460        NaN                     Marília   São Paulo Zona Leste  leste   \n",
+       "1461        NaN                     Keralux   São Paulo Zona Leste  leste   \n",
+       "1462        NaN                       Ester   São Paulo Zona Oeste  oeste   \n",
+       "1463        NaN  São Jorge (raposo Tavares)   São Paulo Zona Oeste  oeste   \n",
+       "\n",
+       "       area  quartos  aluguel  \n",
+       "0        82      3.0     1098  \n",
+       "1        50      2.0     1400  \n",
+       "2        60      2.0     1500  \n",
+       "3        51      2.0     2500  \n",
+       "4        58      2.0     1300  \n",
+       "...     ...      ...      ...  \n",
+       "1459    455      NaN    13500  \n",
+       "1460     70      2.0     1400  \n",
+       "1461  26745      NaN   160000  \n",
+       "1462    300      NaN     5000  \n",
+       "1463    300      NaN     7500  \n",
+       "\n",
+       "[1464 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dados_aluguel_manipulados_ml_sao_paulo.csv', encoding = 'latin')"
    ]
   },
   {
