--- a/1 - web-scraping/mercadolivre-scraping.ipynb
+++ b/1 - web-scraping/mercadolivre-scraping.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "['1.000', '1.299', '620', '799', '2.200']"
+       "['900', '1.000', '1.299', '620', '799']"
       ]
      },
      "execution_count": 5,
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "['1.000', '1.299', '620', '799', '2.200']"
+       "['900', '1.000', '1.299', '620', '799']"
       ]
      },
      "execution_count": 6,
@@ -104,6 +104,26 @@
     "# for loop utilizando list compreehension\n",
     "lista_precos  = [tag.text for tag in lista_precos_tags]\n",
     "lista_precos[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lista_precos)"
    ]
   },
   {
@@ -130,11 +150,11 @@
     {
      "data": {
       "text/plain": [
-       "['50 m² construídos1 quarto',\n",
+       "['30 m² construídos1 quarto',\n",
+       " '50 m² construídos1 quarto',\n",
        " '80 m² construídos2 quartos',\n",
        " '30 m² construídos1 quarto',\n",
-       " '50 m² construídos1 quarto',\n",
-       " '110 m² construídos2 quartos']"
+       " '50 m² construídos1 quarto']"
       ]
      },
      "execution_count": 8,
@@ -145,6 +165,26 @@
    "source": [
     "lista_area_quartos = [info.text for info in lista_area_quartos_tags ]\n",
     "lista_area_quartos[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lista_area_quartos)"
    ]
   },
   {
@@ -171,11 +211,11 @@
     {
      "data": {
       "text/plain": [
-       "['Rua Campo Belo Do Sul 113, Parque Vitória, São Paulo Zona Norte, São Paulo',\n",
+       "['R Das Tâmaras, Vila Paulista, São Paulo Zona Norte, São Paulo',\n",
+       " 'Rua Campo Belo Do Sul 113, Parque Vitória, São Paulo Zona Norte, São Paulo',\n",
        " 'Rua José Eduardo Raduan 5, Parque Edu Chaves, São Paulo Zona Norte, São Paulo',\n",
        " 'Rua Rodolfo Bardela 335, Brasilândia, São Paulo Zona Norte, São Paulo',\n",
-       " 'Brandão Agrões 176, Jardim Peri, São Paulo Zona Norte, São Paulo',\n",
-       " 'Conceição, Jardim Japão, São Paulo Zona Norte, São Paulo']"
+       " 'Brandão Agrões 176, Jardim Peri, São Paulo Zona Norte, São Paulo']"
       ]
      },
      "execution_count": 10,
@@ -190,6 +230,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lista_enderecos)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,18 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zonas = ['norte', 'sul', 'leste', 'oeste']\n",
-    "URL='https://imoveis.mercadolivre.com.br/casas/aluguel/sao-paulo/sao-paulo-zona-{}/{}'\n",
-    "paginas = lista_pag_1[0:8]"
+    "zonas = ['zona-norte', 'zona-sul', 'zona-leste', 'zona-oeste', 'centro']\n",
+    "URL='https://imoveis.mercadolivre.com.br/casas/aluguel/sao-paulo/sao-paulo-{}/{}'\n",
+    "paginas = lista_pag_1[0:7]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +331,6 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_289\n",
-      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-norte/_Desde_337\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_49\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_97\n",
@@ -279,7 +338,6 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_289\n",
-      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-sul/_Desde_337\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_49\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_97\n",
@@ -287,7 +345,6 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_289\n",
-      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-leste/_Desde_337\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_49\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_97\n",
@@ -295,7 +352,13 @@
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_193\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_241\n",
       "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_289\n",
-      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-oeste/_Desde_337\n"
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/_Desde_49\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/_Desde_97\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/_Desde_145\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/_Desde_193\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/_Desde_241\n",
+      "https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-centro/_Desde_289\n"
      ]
     }
    ],
@@ -303,7 +366,7 @@
     "lista_dfs = []\n",
     "for zona in zonas:\n",
     "    for pag in paginas:\n",
-    "        url='https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-zona-{}/{}'.format(zona,pag)\n",
+    "        url='https://imoveis.mercadolivre.com.br/aluguel/sao-paulo/sao-paulo-{}/{}'.format(zona,pag)\n",
     "        print(url)\n",
     "        df=scrap(url)\n",
     "        lista_dfs.append(df)\n",
@@ -312,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -354,60 +417,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>norte</td>\n",
-       "      <td>82 m² construídos3 quartos</td>\n",
-       "      <td>Rua Dona Maria Quedas, Jardim Andaraí, São Pau...</td>\n",
-       "      <td>1.098</td>\n",
+       "      <td>zona-norte</td>\n",
+       "      <td>60 m² construídos2 quartos</td>\n",
+       "      <td>Av Maestro Villa Lobos, Vila Gustavo, São Paul...</td>\n",
+       "      <td>1.600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>norte</td>\n",
-       "      <td>48 m² construídos1 quarto</td>\n",
-       "      <td>R Desembargador Euclides Da Silveira, Casa Ver...</td>\n",
-       "      <td>2.000</td>\n",
+       "      <td>zona-norte</td>\n",
+       "      <td>30 m² construídos1 quarto</td>\n",
+       "      <td>R Das Tâmaras, Vila Paulista, São Paulo Zona N...</td>\n",
+       "      <td>900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>norte</td>\n",
-       "      <td>105 m² construídos3 quartos</td>\n",
-       "      <td>Av Braz Leme, Santana, São Paulo Zona Norte, S...</td>\n",
-       "      <td>3.000</td>\n",
+       "      <td>zona-norte</td>\n",
+       "      <td>51 m² construídos2 quartos</td>\n",
+       "      <td>Rua José Timotheo Da Silva, Jardim Peri, São P...</td>\n",
+       "      <td>950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>norte</td>\n",
-       "      <td>95 m² construídos3 quartos</td>\n",
-       "      <td>Avenida Nova Cantareira, Tucuruvi, São Paulo Z...</td>\n",
-       "      <td>1.814</td>\n",
+       "      <td>zona-norte</td>\n",
+       "      <td>126 m² construídos3 quartos</td>\n",
+       "      <td>Rua Plinio Colás, Lauzane Paulista, São Paulo ...</td>\n",
+       "      <td>2.500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>norte</td>\n",
-       "      <td>50 m² construídos2 quartos</td>\n",
-       "      <td>Parada Pinto, Vila Nova Cachoeirinha, São Paul...</td>\n",
-       "      <td>1.100</td>\n",
+       "      <td>zona-norte</td>\n",
+       "      <td>55 m² construídos1 quarto</td>\n",
+       "      <td>Rua Doutor Gabriel Covelli, Parque Peruche, Sã...</td>\n",
+       "      <td>900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    zona                 area_quartos  \\\n",
-       "0  norte   82 m² construídos3 quartos   \n",
-       "1  norte    48 m² construídos1 quarto   \n",
-       "2  norte  105 m² construídos3 quartos   \n",
-       "3  norte   95 m² construídos3 quartos   \n",
-       "4  norte   50 m² construídos2 quartos   \n",
+       "         zona                 area_quartos  \\\n",
+       "0  zona-norte   60 m² construídos2 quartos   \n",
+       "1  zona-norte    30 m² construídos1 quarto   \n",
+       "2  zona-norte   51 m² construídos2 quartos   \n",
+       "3  zona-norte  126 m² construídos3 quartos   \n",
+       "4  zona-norte    55 m² construídos1 quarto   \n",
        "\n",
        "                                     enderecos_lista aluguel  \n",
-       "0  Rua Dona Maria Quedas, Jardim Andaraí, São Pau...   1.098  \n",
-       "1  R Desembargador Euclides Da Silveira, Casa Ver...   2.000  \n",
-       "2  Av Braz Leme, Santana, São Paulo Zona Norte, S...   3.000  \n",
-       "3  Avenida Nova Cantareira, Tucuruvi, São Paulo Z...   1.814  \n",
-       "4  Parada Pinto, Vila Nova Cachoeirinha, São Paul...   1.100  "
+       "0  Av Maestro Villa Lobos, Vila Gustavo, São Paul...   1.600  \n",
+       "1  R Das Tâmaras, Vila Paulista, São Paulo Zona N...     900  \n",
+       "2  Rua José Timotheo Da Silva, Jardim Peri, São P...     950  \n",
+       "3  Rua Plinio Colás, Lauzane Paulista, São Paulo ...   2.500  \n",
+       "4  Rua Doutor Gabriel Covelli, Parque Peruche, Sã...     900  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,9 +481,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnicodeEncodeError",
+     "evalue": "'latin-1' codec can't encode character '\\u2019' in position 66: ordinal not in range(256)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-30-516901ff9f94>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dados_aluguels_imoveis_ml_sao_paulo.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'latin-1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal)\u001b[0m\n\u001b[0;32m   3202\u001b[0m             \u001b[0mdecimal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdecimal\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3203\u001b[0m         )\n\u001b[1;32m-> 3204\u001b[1;33m         \u001b[0mformatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3206\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpath_or_buf\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    202\u001b[0m             )\n\u001b[0;32m    203\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 204\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_save\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    206\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36m_save\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    323\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    324\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 325\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_save_chunk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart_i\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_i\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    326\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    327\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_save_chunk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_i\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_i\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36m_save_chunk\u001b[1;34m(self, start_i, end_i)\u001b[0m\n\u001b[0;32m    354\u001b[0m         )\n\u001b[0;32m    355\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 356\u001b[1;33m         \u001b[0mlibwriters\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_csv_rows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mpandas\\_libs\\writers.pyx\u001b[0m in \u001b[0;36mpandas._libs.writers.write_csv_rows\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mUnicodeEncodeError\u001b[0m: 'latin-1' codec can't encode character '\\u2019' in position 66: ordinal not in range(256)"
+     ]
+    }
+   ],
    "source": [
     "df.to_csv('dados_aluguels_imoveis_ml_sao_paulo.csv', index =False , encoding = 'latin-1')"
    ]
