--- a/3 -  EDA/EDA_imoveis_aluguel.ipynb
+++ b/3 -  EDA/EDA_imoveis_aluguel.ipynb
@@ -729,6 +729,229 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " Bela Vista                             75\n",
+       " Pinheiros                              55\n",
+       " Consolação                             51\n",
+       " Santana                                46\n",
+       " Perdizes                               33\n",
+       " Vila Buarque                           29\n",
+       " Vila Mariana                           29\n",
+       " Santa Cecília                          28\n",
+       " Moóca                                  26\n",
+       " Jardim Paulista                        24\n",
+       " Penha De Franca                        22\n",
+       " Cerqueira César                        20\n",
+       " Campos Elíseos                         19\n",
+       " Vila Regente Feijó                     19\n",
+       " Barra Funda                            19\n",
+       " Liberdade                              17\n",
+       " Cidade Moncoes                         16\n",
+       " Vila Andrade                           15\n",
+       " Vila Olímpia                           15\n",
+       " Centro                                 14\n",
+       " Água Branca                            14\n",
+       " Jardim Peri                            14\n",
+       " Santa Teresinha                        13\n",
+       " Ipiranga                               12\n",
+       " Vila Mazzei                            12\n",
+       " Brooklin Paulista                      12\n",
+       " Tatuapé                                11\n",
+       " Vila Guilherme                         11\n",
+       " Campo Belo                             11\n",
+       " Vila Carrão                            11\n",
+       " Cambuci                                11\n",
+       " Brás                                   10\n",
+       " Vila Gomes Cardim                      10\n",
+       " Indianópolis                           10\n",
+       " Vila Gustavo                           10\n",
+       " Higienópolis                            9\n",
+       " Itaim Bibi                              9\n",
+       " Vila Leopoldina                         9\n",
+       " Chácara Santo Antônio (zona Leste)      9\n",
+       " Parque Mandaqui                         9\n",
+       " Parada Inglesa                          9\n",
+       " Vila Nova Conceição                     9\n",
+       " Vila Prudente                           9\n",
+       " Vila Antonieta                          8\n",
+       " Aclimação                               8\n",
+       " Vila Formosa                            8\n",
+       " Bom Retiro                              8\n",
+       " República                               8\n",
+       " Vila Guarani (z Sul)                    7\n",
+       " Moema                                   7\n",
+       " Vila Monumento                          7\n",
+       " Itaquera                                7\n",
+       " Alto Da Lapa                            7\n",
+       " Chácara Califórnia                      7\n",
+       " Sacomã                                  7\n",
+       " Jardim Ampliação                        7\n",
+       " Vila Medeiros                           7\n",
+       " Santo Amaro                             7\n",
+       " Vila Suzana                             6\n",
+       " Vila Clementino                         6\n",
+       " Vila Cordeiro                           6\n",
+       " Jardim São Paulo                        6\n",
+       " Vila Ré                                 6\n",
+       " Casa Verde                              6\n",
+       " Vila Guilhermina                        6\n",
+       " Vila Dom Pedro Ii                       6\n",
+       " Jardim Bonfiglioli                      6\n",
+       " Santa Efigênia                          6\n",
+       " Vila Bertioga                           6\n",
+       " Vila Madalena                           6\n",
+       " Sumarezinho                             6\n",
+       " Jardim Penha                            6\n",
+       " Imirim                                  5\n",
+       " Maranhão                                5\n",
+       " Luz                                     5\n",
+       " Freguesia Do Ó                          5\n",
+       " Vila Dom Pedro I                        5\n",
+       " Vila Ipojuca                            5\n",
+       " Vila Matilde                            5\n",
+       " Jaguaré                                 5\n",
+       " Vila Monte Alegre                       5\n",
+       " Parque Císper                           5\n",
+       " Alto Da Mooca                           5\n",
+       " Chácara Santo Antônio                   5\n",
+       " Vila Amália                             5\n",
+       " Jardim Das Vertentes                    5\n",
+       " Vila Nova Mazzei                        5\n",
+       " Lauzane Paulista                        5\n",
+       " Jardim Celeste                          5\n",
+       " Jardim Brasília (zona Norte)            5\n",
+       " Nossa Senhora Do Ó                      5\n",
+       " Vila Paiva                              5\n",
+       " Vila Ester (zona Norte)                 5\n",
+       " Vila Pompéia                            4\n",
+       " Vila Paulista                           4\n",
+       " Jardim São Savério                      4\n",
+       " Vila Aricanduva                         4\n",
+       " Vila Buenos Aires                       4\n",
+       " Quarta Parada                           4\n",
+       " Lapa                                    4\n",
+       " Butantã                                 4\n",
+       " Jardim Pinheiros                        4\n",
+       " Paraíso                                 4\n",
+       " Vila Albertina                          4\n",
+       " Vila Gomes                              4\n",
+       " Bosque Da Saúde                         4\n",
+       " Lajeado                                 4\n",
+       " Vila Maria                              4\n",
+       " Parque Peruche                          4\n",
+       " Tucuruvi                                4\n",
+       " Parada Xv De Novembro                   4\n",
+       " Vila Mascote                            3\n",
+       " Sítio Pinheirinho                       3\n",
+       " Vila Basileia                           3\n",
+       " Nova Piraju                             3\n",
+       " Vila Sônia                              3\n",
+       " Vila Palmeiras                          3\n",
+       " Conjunto Residencial José Bonifácio     3\n",
+       " Vila Parque Jabaquara                   3\n",
+       " Parque Edu Chaves                       3\n",
+       " Vila União (zona Leste)                 3\n",
+       " Sé                                      3\n",
+       " Lar São Paulo                           3\n",
+       " Parque Novo Mundo                       3\n",
+       " Vila Anglo Brasileira                   3\n",
+       " City América                            3\n",
+       " Jardim Das Laranjeiras                  3\n",
+       " Parque Rebouças                         3\n",
+       " Jardim Íris                             3\n",
+       " Quinta Da Paineira                      3\n",
+       " Vila Maria Alta                         3\n",
+       " Vila Das Mercês                         3\n",
+       " Vila Hamburguesa                        3\n",
+       " Fazenda Morumbi                         3\n",
+       " Vila Cruz Das Almas                     3\n",
+       " Jardim América Da Penha                 3\n",
+       " Carandiru                               3\n",
+       " Jardim Aeroporto                        3\n",
+       " Vila Cruzeiro                           3\n",
+       " Parque Jabaquara                        3\n",
+       " Jaçanã                                  3\n",
+       " Vila Romana                             3\n",
+       " Vila Uberabinha                         3\n",
+       " Jardim Brasil                           3\n",
+       " Vila Ema                                3\n",
+       " Jardim Monte Kemel                      3\n",
+       " Vila Aurora                             3\n",
+       " Vila Deodoro                            3\n",
+       " Vila Gumercindo                         3\n",
+       " Jardim Leonor Mendes De Barros          3\n",
+       "Name: bairro, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_rows', 250)\n",
+    "df.bairro.value_counts().head(150)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - Selecionando apenas os bairros com no mínimo 3 registros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic_select = dict(df.bairro.value_counts().head(150))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_select = list(dic_select.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.set_index('bairro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[lista_select]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.reset_index()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -737,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
